workload/jenkins-ci/k8s_manifest/jenkinsAccount.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ci
